--- a/src/TagScanner/res/layout/main.xml
+++ b/src/TagScanner/res/layout/main.xml
@@ -38,6 +38,14 @@
             android:enabled="false"
             android:text="@string/add" />
 
+        <Button
+            android:id="@+id/open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignTop="@+id/uid"
+            android:text="@string/open" />
+
     </RelativeLayout>
 
     <Button
