--- a/src/TagScanner/res/values/bt_strings.xml
+++ b/src/TagScanner/res/values/bt_strings.xml
@@ -27,7 +27,7 @@
 -->
 	
 	   <!--  DeviceListActivity -->
-    <string name="scanning">scanning for devices...</string>
+    <string name="scanning">scanning for devices…</string>
     <string name="select_device">select a device to connect</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
