Adds first pass at contact integration

--- a/src/TagScanner/res/menu/rfid_context.xml
+++ b/src/TagScanner/res/menu/rfid_context.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/delete" android:title="@string/delete"></item>
+    <item android:id="@+id/associate_contact" android:title="@string/associate_contact"></item>
     
 
 </menu>
