--- a/src/TagScanner/res/layout/rfid_list_item.xml
+++ b/src/TagScanner/res/layout/rfid_list_item.xml
@@ -18,9 +18,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingRight="?android:attr/listPreferredItemPaddingRight" >
+    android:minHeight="@dimen/listItemHeight"
+    android:paddingLeft="@dimen/listPaddingLeft"
+    android:paddingRight="@dimen/listPaddingRight" >
 
     <TextView
         android:id="@android:id/text1"
@@ -30,12 +30,12 @@
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/contact"
         android:gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+        android:textAppearance="@android:style/TextAppearance.Medium" />
 
     <QuickContactBadge
         android:id="@+id/contact"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true" android:src="@drawable/ic_launcher"
         android:layout_alignParentTop="true"/>
 
